--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </p>
             <div class="afterAndBefore">
                 <figure typeof="schema:image">
-                    <img class="markup" src="./home.jpg">
+                    <img class="markup" src="home.jpg">
                     <figcaption>
                         Prima chita a paginii principale
                     </figcaption>
