--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </style>
 </head>
 
-<body>
+<body prefix="schema: http://schema.org/">
     <article typeof="schema:ScholarlyArticle">
         <header>
             <h1 property="schema:name">
