--- a/index.html
+++ b/index.html
@@ -6,59 +6,7 @@
     <title>Documentatie Hege - headgear web assistant</title>
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
-    <style>
-        body {
-            padding-top: 20px;
-            padding-bottom: 50px;
-        }
-
-        body>* {
-            font-family: 'Playfair Display', serif;
-        }
-
-        header h1 {
-            font-size: 1.9em;
-            text-align: center;
-        }
-
-        aside, header div, section {
-            padding-left: 300px;
-            padding-right: 300px;
-        }
-
-        #design {
-            padding-left: 0;
-            padding-right: 0;
-        }
-
-        #design p,
-        #design h2 {
-            padding-left: 300px;
-            padding-right: 300px;
-        }
-
-        .markup {
-            height: 350px;
-            min-width: 515px;
-            max-width: 515px;
-        }
-
-        .webMarkup {
-            height: 350px;
-        }
-
-        .afterAndBefore {
-            padding-left: 100px;
-            padding-right: 100px;
-            width: 1030px;
-            display: flex;
-            flex-direction: row;
-        }
-
-        .cuprins ul {
-            list-style: none;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body prefix="schema: http://schema.org/">
