--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@
             </p>
             <h3>Local storage</h3>
             <p>
-                Avand posibilitatea de a-si face o catura de ecran cu accesoriul dorit, utilizatorul poate salva aceste
+                Avand posibilitatea de a-si face o captura de ecran cu accesoriul dorit, utilizatorul poate salva
+                aceste
                 imagini local, fiind accesibile pentru descarcare dupa capturare. Pentru a obtine aceasta
                 functionalitate,
                 folosim mecanismul de stocare locala a datelor oferit de <strong>Web Storage API</strong>: <code>localStorage</code>.
@@ -252,19 +253,43 @@
             </p>
             <h3>Session storage</h3>
             <p>
-                Un alt mecanism de stocare a datelor oferit de Web Storage API este <code>sessionStorage</code>. Ce il face diferit fata 
-                de precedentul e faptul ca valabilitatea datelor dureaza exact cat sesiunea paginii, in alte cuvinte, cat timp utilizatorul
-                tine fereastra pornita. Functionalitatea acestuia o folosim pentru a simula cosul de cumparaturi, astfel simuland si magazinul 
-                online. Utilizatorul isi poate verifica cosul dupa selectia accesoriilor dorite, si la urmatoarea sesiune nu va avea in cos 
+                Un alt mecanism de stocare a datelor oferit de Web Storage API este <code>sessionStorage</code>. Ce il
+                face diferit fata
+                de precedentul e faptul ca valabilitatea datelor dureaza exact cat sesiunea paginii, in alte cuvinte,
+                cat timp utilizatorul
+                tine fereastra pornita. Functionalitatea acestuia o folosim pentru a simula cosul de cumparaturi,
+                astfel simuland si magazinul
+                online. Utilizatorul isi poate verifica cosul dupa selectia accesoriilor dorite, si la urmatoarea
+                sesiune nu va avea in cos
                 accesoriile din sesiunea trecuta, imbunatatind experienta utilizatorului.
             </p>
             <h3>JSON</h3>
             <p>
-                Neavand partea de server simulam o baza de date printr-un fisier JSON. Fiecare accesoriu isi are calea catre imagine folosita 
-                pentru reprezentare, descrierea si categoriile ei. Pe baza categoriilor, accesoriile vor fi sortate in pagina principala de 
-                accesorii, de asemenea pe baza lor se vor face ulterioarele recomandari bazate pe preferintele utilizatoruli. Fiind o aplicaite
-                de tipul SPA, fisierul JSON vine odata cu requestul initial, astfel permitand accesarea accesoriilor in modul offline.
+                Neavand partea de server simulam o baza de date printr-un fisier JSON. Fiecare accesoriu isi are calea
+                catre imagine folosita
+                pentru reprezentare, descrierea si categoriile ei. Pe baza categoriilor, accesoriile vor fi sortate in
+                pagina principala de
+                accesorii, de asemenea pe baza lor se vor face ulterioarele recomandari bazate pe preferintele
+                utilizatorului. Fiind o aplicaite
+                de tipul SPA, fisierul JSON vine odata cu requestul initial, astfel permitand accesarea accesoriilor in
+                modul offline.
             </p>
+            <h3>Microdate</h3>
+            <p>
+                Libraria pe care o vom folosi pentru a marca datele site-ului nostru este <a href="https://schema.org/">Schema.org</a>.
+                Aceasta ajuta la intelegerea mai bine a continutului site-ului de catre motoarele de cautare(SEO -
+                Search negine Optimization).
+                Marcatorul parinte pe care il folosim este schema <a href="https://schema.org/Store"><code>store</code></a>
+                reprezentand magazinul schema generala pentru magazine.
+                De exemplu vom folosi prorietatea <a href="https://schema.org/brand"><code>brand</code></a>
+                pentru fiecare produs pe care il ofera site-ul.
+            </p>
+            <figure typeof="schema:image">
+                <img class="microdate" src="microdate.png">
+                <figcaption>
+                    Exemplu microdate
+                </figcaption>
+            </figure>
         </section>
     </article>
 </body>
