--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 Search negine Optimization).
                 Marcatorul parinte pe care il folosim este schema <a href="https://schema.org/Store"><code>store</code></a>
                 reprezentand magazinul schema generala pentru magazine.
-                De exemplu vom folosi prorietatea <a href="https://schema.org/brand"><code>brand</code></a>
+                De exemplu vom folosi prorietatea <a href="https://schema.org/Offer"><code>offer</code></a>
                 pentru fiecare produs pe care il ofera site-ul.
             </p>
             <figure typeof="schema:image">
