--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
                 pagina principala de
                 accesorii, de asemenea pe baza lor se vor face ulterioarele recomandari bazate pe preferintele
                 utilizatorului. Fiind o aplicaite
-                de tipul SPA, fisierul JSON vine odata cu requestul initial, astfel permitand accesarea accesoriilor in
-                modul offline.
+                de tipul SPA, fisierul JSON vine odata cu requestul initial, astfel permitand accesarea accesoriilor fara
+                request-uri aditionale.
             </p>
             <h3>Microdate</h3>
             <p>
