--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <figure typeof="schema:image">
                     <img class="markup" src="./item2.jpg">
                     <figcaption>
-                        Prima schita a paginii unde utilizatorul poate pruba virtual accesoriu
+                        Prima schita a paginii unde utilizatorul poate proba virtual accesoriul
                     </figcaption>
                 </figure>
                 <figure typeof="schema:image">
