--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <figure typeof="schema:image">
                     <img class="webMarkup" src="./item_web2.jpg">
                     <figcaption>
-                        Design-ul final al paginii unde utilizatorul poate pruba virtual accesoriu
+                        Design-ul final al paginii unde utilizatorul poate proba virtual accesoriul
                     </figcaption>
                 </figure>
             </div>
