--- a/index.html
+++ b/index.html
@@ -263,16 +263,12 @@
                 sesiune nu va avea in cos
                 accesoriile din sesiunea trecuta, imbunatatind experienta utilizatorului.
             </p>
-            <h3>JSON</h3>
+            <h3>Google Firebase</h3>
             <p>
-                Neavand partea de server simulam o baza de date printr-un fisier JSON. Fiecare accesoriu isi are calea
-                catre imagine folosita
-                pentru reprezentare, descrierea si categoriile ei. Pe baza categoriilor, accesoriile vor fi sortate in
-                pagina principala de
-                accesorii, de asemenea pe baza lor se vor face ulterioarele recomandari bazate pe preferintele
-                utilizatorului. Fiind o aplicaite
-                de tipul SPA, fisierul JSON vine odata cu requestul initial, astfel permitand accesarea accesoriilor fara
-                request-uri aditionale.
+                Neavand nevoie de un server, am cautat solutii de stocare a datelor astfel incat sa putem lua datele doar prin requesturi
+                AJAX. Asadar am folosit Google Firebase ca baza de date NoSQL. Acolo am stocat toate datele legate de produsele pe care le
+                ofera site-ul. Am stocat atat datele text cat si imaginile. Google Firebase ofera un mod de a interoga baza de date credand 
+                query-uri pe baza de functii putand chiar si filtra pe cloud datele de care avem nevoie.
             </p>
             <h3>Microdate</h3>
             <p>
