--- a/index.html
+++ b/index.html
@@ -266,9 +266,10 @@
             <h3>Google Firebase</h3>
             <p>
                 Neavand nevoie de un server, am cautat solutii de stocare a datelor astfel incat sa putem lua datele doar prin requesturi
-                AJAX. Asadar am folosit Google Firebase ca baza de date NoSQL. Acolo am stocat toate datele legate de produsele pe care le
-                ofera site-ul. Am stocat atat datele text cat si imaginile. Google Firebase ofera un mod de a interoga baza de date credand 
-                query-uri pe baza de functii putand chiar si filtra pe cloud datele de care avem nevoie.
+                AJAX. Asadar din suita de servicii <strong>Google Firebase</strong> am folosit <strong>Cloud Firestore</strong> si 
+                <strong>Cloud Storage</strong>. Acolo am stocat toate datele legate de produsele pe care le
+                ofera site-ul. Am stocat atat datele text cat si imaginile. Google Firebase ofera un mod de a interoga baza de date creand 
+                query-uri pe baza functilor, putand chiar si filtra pe cloud datele de care avem nevoie.
             </p>
             <h3>Microdate</h3>
             <p>
