--- a/index.html
+++ b/index.html
@@ -281,6 +281,17 @@
                 De exemplu vom folosi prorietatea <a href="https://schema.org/Offer"><code>offer</code></a>
                 pentru fiecare produs pe care il ofera site-ul.
             </p>
+            <h3>Banchmarking</h3>
+            <p>
+                Pentru a imbunatatii calitatea aplicatiei noastre web am decurs la utilizarea unui tool automat open-source
+                <a href="https://developers.google.com/web/tools/lighthouse/">
+                    <strong>Google Lighthouse</strong>
+                </a>
+                Fiind un produs Google, este acesibil din browser-ul Chrome, in DevTools in Audits. Pe baza raportului oferit de acest tool am
+                imbunatit performanta site-ului, folosind sfaturile din raport. De asemenea raportul ne-a aratat ca aplicatia respecta metricile de
+                SEO (<em>Search Engine Optimization</em>) fiind folosite microdatele, cat si metricile de best practices ceea ce a fost confirmat si
+                de validatorul <a href="https://validator.w3.org/">W3C</a>.
+            </p>
             <figure typeof="schema:image">
                 <img class="microdate" src="microdate.png">
                 <figcaption>
